--- a/index.html
+++ b/index.html
@@ -161,24 +161,17 @@ Description: Nothing special.
 		
 		<!-- CSS3 gallery content -->
 		<div id="gallery-box" class="gallery-box">
+			<div class="sub-gallery-box">
 				<div class="dg-wrapper">
-					<a href="#"><img src="img/3Dgallery/1.jpg" alt="image01"><div>http://www.colazionedamichy.it/</div></a>
-					<a href="#"><img src="img/3Dgallery/2.jpg" alt="image02"><div>http://www.percivalclo.com/</div></a>
-					<a href="#"><img src="img/3Dgallery/3.jpg" alt="image03"><div>http://www.wanda.net/fr</div></a>
-					<a href="#"><img src="img/3Dgallery/4.jpg" alt="image04"><div>http://lifeingreenville.com/</div></a>
-					<a href="#"><img src="img/3Dgallery/5.jpg" alt="image05"><div>http://circlemeetups.com/</div></a>
-					<a href="#"><img src="img/3Dgallery/6.jpg" alt="image06"><div>http://www.castirondesign.com/</div></a>
-					<a href="#"><img src="img/3Dgallery/7.jpg" alt="image07"><div>http://www.foundrycollective.com/</div></a>
-					<a href="#"><img src="img/3Dgallery/8.jpg" alt="image08"><div>http://www.mathiassterner.com/home</div></a>
-					<a href="#"><img src="img/3Dgallery/9.jpg" alt="image09"><div>http://learnlakenona.com/</div></a>
-					<a href="#"><img src="img/3Dgallery/10.jpg" alt="image10"><div>http://www.neighborhood-studio.com/</div></a>
-					<a href="#"><img src="img/3Dgallery/11.jpg" alt="image11"><div>http://www.beckindesign.com/</div></a>
-					<a href="#"><img src="img/3Dgallery/12.jpg" alt="image12"><div>http://kicksend.com/</div></a>
+					<a data-toggle="modal" href="#Service-page"><img src="img/3Dgallery/gallery01.jpg" alt="Service"><div>事業紹介</div></a>
+					<a data-toggle="modal" href="#Recriut-page"><img src="img/3Dgallery/gallery02.jpg" alt="Recriut"><div>採用情報</div></a>
+					<a data-toggle="modal" href="#Company-page"><img src="img/3Dgallery/gallery03.jpg" alt="Company"><div>会社案内</div></a>
 				</div>
 				<nav>	
-					<span class="dg-prev">&lt;</span>
-					<span class="dg-next">&gt;</span>
+					<span class="dg-prev"></span>
+					<span class="dg-next"></span>
 				</nav>
+			</div>
 		</div>
 		
 		<br style="clear: both;" >
